Configure JWT security and role-based authorization